# opensus

./: .gitignore  Cargo.toml  LICENSE  README.md  assignment.txt  build.rs  input.txt  state.md  susfile
.github/workflows/: build-and-release.yml
.susmos/: config.json
assets/prompts/: main.md
prompts/: analyst_agent.md  coder.md  dispatch_agent.md  exploit.md  heartbeat.md  intel.md  main.md  main_agent.md  planning_agent.md  report_agent.md  reporter.md  reviewer.md  strategist_agent.md  swarm.md  worker_agent.md
scripts/: deepsneek-linux-x64-bootstrap.sh  opensus-linux-x64-bootstrap.sh
src/: chat.rs  cli.rs  config.rs  cve.rs  main.rs  plan.rs  runtime.rs  swarm.rs  tools.rs
